cabal-version: 3.6

name: rabin
version: 0.0.0.0
synopsis: Rabin's Public Key Cryptosystem
description: Please see the README on GitHub at <https://github.com/aionescu/rabin-cryptosystem#readme>
homepage: https://github.com/aionescu/rabin-cryptosystem#readme
bug-reports: https://github.com/aionescu/rabin-cryptosystem/issues
license: GPL-3.0-only
license-file: LICENSE.txt
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2022 Alex Ionescu
category: Encryption
build-type: Simple
extra-source-files: README.md

executable rabin
  main-is: Main.hs

  other-modules:
    Rabin.Utils
    Rabin.KeyGen
    Rabin.Encryption
    Rabin.Encoding
    Opts

  hs-source-dirs: src

  build-depends:
    base >=4.15 && <5
    , bytestring ^>= 0.11.2
    , extra ^>= 1.7.10
    , mwc-random ^>= 0.15
    , random ^>= 1.2.1
    , optparse-generic ^>= 1.4.7

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wprepositive-qualified-module
    -Wmissing-deriving-strategies
    -Wunused-packages
    -Widentities
    -Wredundant-constraints
    -Wunticked-promoted-constructors
    -Wpartial-fields
    -Wmissing-exported-signatures
    -Wno-name-shadowing

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoMonomorphismRestriction
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples
    ViewPatterns

  default-language: Haskell2010
