cabal-version: 3.8

name: rabin
version: 0.0.0.0
synopsis: Rabin's Public Key Cryptosystem
description: Please see the README on GitHub at <https://github.com/aionescu/rabin-cryptosystem#readme>
homepage: https://github.com/aionescu/rabin-cryptosystem#readme
bug-reports: https://github.com/aionescu/rabin-cryptosystem/issues
license: GPL-3.0-only
license-file: LICENSE.txt
maintainer: aaionescu@pm.me
copyright: Copyright (C) 2022-2023 Alex Ionescu
category: Encryption
build-type: Simple
extra-source-files: README.md

common ghc-flags
  default-language: GHC2021
  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImplicitParams
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoFieldSelectors
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    UnliftedDatatypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

executable rabin
  import: ghc-flags

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Rabin.Utils
    Rabin.KeyGen
    Rabin.Encryption
    Rabin.Encoding
    Opts

  build-depends:
    base >=4.18 && <5
    , bytestring ^>= 0.11.5
    , mwc-random ^>= 0.15
    , optparse-generic ^>= 1.5.1
    , random ^>= 1.2.1
